--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "BloggingDatabase": "Server=(localdb)\\mssqllocaldb;Database=bisk.blogging;Trusted_Connection=True;"
+    "BloggingDatabase": "Server=(localdb)\\mssqllocaldb;Database=bisk.blogging;Trusted_Connection=True;",
+    "PgBloggingDatabase": "Host=postgres;Database=bisk.blogging;Username=pguser;Password=topsecret"
   }
 }
